[package]
name = "bevy-porfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13" }
hana_prefab = "0.1.1"
thiserror = "1.0.58"
xml = "0.8.10"

[target.wasm32-unknown-unknown.dependencies]
console_log = { version = "1.0.0", features = ["color"] }
